--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,15 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+# Ignore everything in the build folder except build/web/
+/build/*
+!/build/web/
+!/build/web/*
+
+test/
+web/
+windows/
+
 
 # Symbolication related
 app.*.symbols
