--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,7 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-# Ignore everything in the build folder except build/web/
-/build/*
-!/build/web/
-!/build/web/*
+/build/
 
 test/
 web/
